--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -86,3 +86,11 @@ services:
       - '81:81'
     restart: always
 
+  streamlitQA:
+    build:
+      context: .
+      dockerfile: ./streamlitQA/Dockerfile
+    ports:
+      - '8501:8501'
+    restart: always
+
