--- a/streamlitqa/Dockerfile
+++ b/streamlitqa/Dockerfile
@@ -16,6 +16,6 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 8501
 
-HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
+HEALTHCHECK CMD curl --fail http://0.0.0.0:8501/_stcore/health
 
 ENTRYPOINT ["streamlit", "run", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
