--- a/streamlitqa/Dockerfile
+++ b/streamlitqa/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-RUN COPY . .
+COPY ./streamlitqa .
 
 RUN pip3 install -r requirements.txt
 
