--- a/streamlitqa/Dockerfile
+++ b/streamlitqa/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-COPY ./streamlitqa .
+RUN COPY ./streamlitqa .
 
 RUN pip3 install -r requirements.txt
 
@@ -18,4 +18,4 @@ EXPOSE 8501
 
 HEALTHCHECK CMD curl --fail http://0.0.0.0:8501/_stcore/health
 
-ENTRYPOINT ["ls"]
+ENTRYPOINT ["streamlit", "run", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
