--- a/streamlitqa/config.toml
+++ b/streamlitqa/config.toml
@@ -41,7 +41,7 @@ port = 8501
 
 # Enables support for Cross-Origin Request Sharing, for added security.
 # Default: true
-enableCORS = true
+enableCORS = false
 enableXsrfProtection = false
 
 [browser]
