--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,20 +63,8 @@ services:
     volumes:
       -  ./server/src:/app/src
 
-  frontend:
-    hostname: frontend
-    build:
-      context: .
-      dockerfile: ./frontend/Dockerfile
-      args:
-        BACKEND_URL: ${BACKEND_URL}
-    ports:
-      - '3000:3000'
-    restart: always
-
   nginx:
     depends_on:
-      - frontend
       - back
       - minio
     build:
@@ -86,11 +74,11 @@ services:
       - '81:81'
     restart: always
 
-  streamlitqa:
-    hostname: streamlitqa
+  streamlit:
+    hostname: streamlit
     build:
       context: .
-      dockerfile: ./streamlitqa/Dockerfile
+      dockerfile: ./streamlit/Dockerfile
     ports:
       - '8501:8501'
     restart: always
