--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,16 @@ services:
     volumes:
       -  ./server/src:/app/src
 
+  qdrant:
+    image: qdrant/qdrant
+    container_name: qdrant
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - ./qdrant_storage:/qdrant/storage:z
+    restart: unless-stopped
+
   nginx:
     depends_on:
       - back
