--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,10 @@ services:
     volumes:
       - ./qdrant_storage:/qdrant/storage:z
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '5'  # Allows the container to use up to 50% of a single CPU core
 
   gradio:
     hostname: gradio
